--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -31,10 +31,9 @@ header div:nth-of-type(1)   {
     width: 85%;
 }
 header, aside, article  {
-    padding: 8px;
+    padding: 5px;
     background-color: #d6d3c4;
     border-radius: 5px;
-    margin-bottom: 1em;
     box-shadow: 0px 0px 10px 1px #5c4033;
 }
 section, aside  {
@@ -43,16 +42,18 @@ section, aside  {
 }
 section {
     width: 89%;
-    height: 80%;
-    background-color: grey;
+    height: 77%;
     margin-right: 1%;
 }
 article {
     height: 100%;
 }
+article p em    {
+    color: #5c4033;
+}
 aside   {
     width: 10%;
-    height: 80%;
+    height: 78%;
     text-align: center;
 }
 h1, h2, h3, h4  {
